--- a/index.css
+++ b/index.css
@@ -404,7 +404,9 @@ h1{
 }
 
 #setAlarm h1{
-    font-size:6vmin !important;
+    font-size:5.5vmin !important;
+
+    min-height:30%;
     /* margin:0;
     height:20%; */
 }
@@ -414,8 +416,9 @@ h1{
     align-items: center;
     margin:0;
     padding :0;
-    height:40%;
+    min-height:35%;
     width:80%;
+    
 }
 
 
@@ -425,7 +428,7 @@ input{
     margin-right:.1rem;
     outline: none;
     cursor: pointer;
-    font-size:4em !important;
+    font-size:4vmin !important;
 }
 form{
     margin-left:.2rem;
@@ -448,7 +451,7 @@ label{
 /* container for saving alarm and stopping ringing alarm */
 #set_container{
     width:80%;
-    height:50%;
+    min-height:35% !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -460,7 +463,7 @@ label{
     width:35%;
     border:1px solid white;
     border-radius:10px;
-    padding:0 17px;
+    /* padding:0 17px; */
     color:white;
     margin-right:3px;
     cursor: pointer;
@@ -489,7 +492,7 @@ label{
     flex-direction: column;
     align-items: center;
     overflow-y: scroll;
-    /* margin-bottom:10%; */
+    margin-bottom:5%;
 }
 
 /* display all the alarms set */
@@ -498,7 +501,7 @@ label{
     justify-content: space-around;
     align-items: center;
     width:100%;
-    min-height:20%;
+    min-height:24%;
     margin-top:.6%;
     color:white;
     cursor:pointer;
